# pizzeria_v3.0

./: .env.dist  .gitignore  docker-compose.yml  main.py  pyproject.toml
pizzeria_app/app/: alembic.ini  main.py
pizzeria_app/app/controllers/: customers.py  orders.py  positions.py  products.py
pizzeria_app/app/database/: connections.py
pizzeria_app/app/database/db_models/: pizzeria_tables.py
pizzeria_app/app/database/migrations/: env.py
pizzeria_app/app/database/migrations/versions/: 2023_08_08_1451-d07e1b2e6646_database_creations.py  2023_08_08_1620-c1517a21a00e_init.py  2023_08_09_1200-1a5d23460a51_add_on_stop_list_to_products.py  2023_08_10_1533-1c2b55928857_add_column_is_active.py  (+6 more)
pizzeria_app/app/dto/: config.py
pizzeria_app/app/dto/authorization/: payload.py  schema.py
pizzeria_app/app/dto/customers/: payload.py  schema.py
pizzeria_app/app/dto/order_details/: payload.py  schema.py
pizzeria_app/app/dto/orders/: payload.py  schema.py
pizzeria_app/app/dto/positions/: payload.py  schema.py
pizzeria_app/app/dto/products/: payload.py  schema.py
pizzeria_app/app/dto/products_positions/: schema.py
pizzeria_app/app/providers/: customers.py  database.py  orders.py  positions.py  products.py  security.py
pizzeria_app/app/routes/: api.py
pizzeria_app/app/routes/v1/: authorization.py  customers.py  orders.py  orders_detail.py  positions.py  products.py  router.py  supplies.py
pizzeria_app/app/security/: hash_password.py  jwt_token.py
pizzeria_app/app/services/: customers.py  positions.py  products.py
